# Fayeblade_mcp

./: .coveragerc  .gitignore  Makefile  README.md  SECURITY.md  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
docs/: ARCHITECTURE.md  GUIDE.md  TROUBLESHOOTING.md
examples/: hard_mcp_host.py  line_host.py
src/: __init__.py  venice_browser_mcp.py  venice_browser_mcp_core.py  venice_browser_mcp_v23_impl.py
tests/: test_browser_env.py  test_core.py  test_e2e.py  test_framers.py
venice/: bridge.py  cli.py  config.py
venice-browser-mcp/: README.md  payload.json  temp_readme.b64  temp_readme.md
venice-browser-mcp/src/: venice_browser_mcp_core.py
