[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "venice-browser-mcp"
version = "1.0.0"
description = "A tiny, production-minded browser bridge that speaks a JSON-RPC-ish protocol over stdin/stdout."
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "playwright>=1.46.0"
]

[project.scripts]
venice = "venice.cli:main"

[tool.pytest.ini_options]
markers = [
    "e2e: marks tests as end-to-end",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
]